--- a/deploy.yaml
+++ b/deploy.yaml
@@ -38,6 +38,26 @@ spec:
         ports:
         - containerPort: 27017
 ---
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name: simulator
+# spec:
+#   selector:
+#     matchLabels:
+#       app: simulator
+#   replicas: 1 # tells deployment to run 1 pods matching the template
+#   template: # create pods using pod definition in this template
+#     metadata:
+#       labels:
+#         app: simulator
+#     spec:
+#       containers:
+#       - name: simulator
+#         image: danimalcontainers.azurecr.io/simulator:1
+#         ports:
+#         - containerPort: 1000
+# ---      
 apiVersion: v1
 kind: Service
 metadata:
